# uniquant

./: .env.example  .gitignore  README.md  WHITEPAPER.md  foundry.toml
miner/: Cargo.toml
miner/src/: lib.rs
script/: Deploy.s.sol  DeployMinerAgent.s.sol  RegisterAgent.s.sol  SetMinerAgentURI.s.sol
scripts/: build-whitepaper.py
src/: MinerAgent.sol  Uniquant.sol
test/: MinerAgent.t.sol  RegisterAgentFork.t.sol  Uniquant.t.sol  UniquantFork.t.sol
web/: package-lock.json  package.json
web/public/: agent.json  miner-worker.js
web/public/miner-wasm/: miner.d.ts  miner.js  miner_bg.wasm  miner_bg.wasm.d.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/api/agent/[id]/: route.ts
web/src/app/api/collection/: route.ts
web/src/app/quantum/: page.tsx
web/src/app/whitepaper/: page.tsx
web/src/components/: AgentScene.tsx  ConnectWallet.tsx  Genesis.tsx  Header.tsx  HeroAgent.tsx  HeroCity.tsx  Miner.tsx  MinerAgent.tsx  NetworkBanner.tsx  RecentMints.tsx  Stats.tsx  Trade.tsx
web/src/hooks/: useMiner.ts
web/src/lib/: contract.ts  minerAgentAbi.ts  uniquantAbi.ts  wagmi.ts
